// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLoader does not render loader when has failure and more content 1`] = `
<React.Fragment>
  <BaseComponent
    count={5}
    items={
      Array [
        1,
        2,
        3,
        4,
        5,
      ]
    }
    status="failure"
  />
</React.Fragment>
`;

exports[`withLoader does not render loader when has success and no more content 1`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    items={
      Array [
        1,
        2,
        3,
        4,
        5,
      ]
    }
    status="success"
  />
</React.Fragment>
`;

exports[`withLoader renders default 1`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    items={Array []}
    status="success"
  />
</React.Fragment>
`;

exports[`withLoader renders loader when has success and has more content 1`] = `
<React.Fragment>
  <BaseComponent
    count={5}
    items={
      Array [
        1,
        2,
        3,
        4,
        5,
      ]
    }
    status="success"
  />
  <Loader />
</React.Fragment>
`;

exports[`withLoader renders loader when is fetching 1`] = `
<React.Fragment>
  <BaseComponent
    count={0}
    items={Array []}
    status="fetching"
  />
  <Loader />
</React.Fragment>
`;
